src/trmd3.css
/* ... */
/* CHECKBOX / DESELECTED / LIGHT / BACKGROUND AND BORDER */
.checkbox-deselected.checkbox-light-theme {
	background-color: transparent;
	border: 2px solid var(--m3-sys-light-on-surface-variant);
}

/* CHECKBOX / DESELECTED / DARK / BACKGROUND AND BORDER */
.checkbox-deselected.checkbox-dark-theme {
	background-color: transparent;
	border: 2px solid var(--m3-sys-dark-on-surface-variant);
}

/* CHECKBOX / DESELECTED / ERROR / LIGHT */
.checkbox-deselected.checkbox-error.checkbox-light-theme {
	border: 2px solid var(--m3-sys-light-error);
}

/* CHECKBOX / DESELECTED / ERROR / DARK */
.checkbox-deselected.checkbox-error.checkbox-dark-theme {
	border: 2px solid var(--m3-sys-dark-error);
}

/* CHECKBOX / ICON */
.checkbox-icon {
	display: flex;
	margin: 0 auto;
	align-items: center;
	position: relative;
	width: 100%;
	height: 100%;
	right: 13%;
}

/* CHECKBOX / LIGHT / ICON */
.checkbox-light-theme > .checkbox-icon {
	color: var(--m3-sys-light-on-primary);
}

/* CHECKBOX / ENABLED / DARK / ICON */
.checkbox-enabled.checkbox-dark-theme > .checkbox-icon {
	color: var(--m3-sys-dark-on-primary);
}

/* CHECKBOX / DISABLED / DARK / ICON */
.checkbox-disabled.checkbox-dark-theme > .checkbox-icon {
	color: var(--m3-sys-dark-surface);
}

/* CHECKBOX / DESELECTED / ICON */
.material-symbols-outlined.checkbox-icon.checkbox-icon-deselected {
	color: transparent;
}

/* CHECKBOX / ERROR / ENABLED / DARK / ICON */
.checkbox-error.checkbox-enabled.checkbox-dark-theme
	> .material-symbols-outlined.checkbox-icon.checkbox-icon-selected {
	color: var(--m3-sys-dark-on-error);
}

/* CHECKBOX / OVERLAY */
.checkbox-overlay {
	width: 225%;
	height: 225%;
	background-color: transparent;
	border-radius: 100%;
	transform: translate(-29%, -71%);
}

/* CHECKBOX / DEFAULT / LIGHT/ OVERLAY / HOVER */
.checkbox-default.checkbox-light-theme > .checkbox-overlay:hover {
	background-color: var(--m3-sys-light-primary-opacity08);
}

/* CHECKBOX / DEFAULT / LIGHT / OVERLAY / FOCUS */
.checkbox-default.checkbox-light-theme > .checkbox-overlay:focus {
	background-color: var(--m3-sys-light-primary-opacity12);
}

/* CHECKBOX / DEFAULT / /LIGHT OVERLAY / ACTIVE */
.checkbox-default.checkbox-light-theme > .checkbox-overlay:active {
	background-color: var(--m3-sys-light-primary-opacity16);
}

/* CHECKBOX / ERROR / LIGHT / OVERLAY / HOVER */
.checkbox-error.checkbox-light-theme > .checkbox-overlay:hover {
	background-color: var(--m3-sys-light-error-opacity08);
}

/* CHECKBOX / ERROR / LIGHT / OVERLAY / FOCUS */
.checkbox-error.checkbox-light-theme > .checkbox-overlay:focus {
	background-color: var(--m3-sys-light-error-opacity12);
}

/* CHECKBOX / ERROR / LIGHT / OVERLAY / ACTIVE */
.checkbox-error.checkbox-light-theme > .checkbox-overlay:active {
	background-color: var(--m3-sys-light-error-opacity16);
}

/*JT*/
/* CHECKBOX / DEFAULT / DARK / OVERLAY / HOVER */
.checkbox-default.checkbox-dark-theme > .checkbox-overlay:hover {
	background-color: var(--m3-sys-dark-primary-opacity08);
}

/* CHECKBOX / DEFAULT / DARK / OVERLAY / FOCUS */
.checkbox-default.checkbox-dark-theme > .checkbox-overlay:focus {
	background-color: var(--m3-sys-dark-primary-opacity12);
}

/* CHECKBOX / DEFAULT / DARK / OVERLAY / ACTIVE */
.checkbox-default.checkbox-dark-theme > .checkbox-overlay:active {
	background-color: var(--m3-sys-dark-primary-opacity16);
}

/* CHECKBOX / ERROR / DARK / OVERLAY / HOVER */
.checkbox-error.checkbox-dark-theme > .checkbox-overlay:hover {
	background-color: var(--m3-sys-dark-error-opacity08);
}

/* CHECKBOX / ERROR / DARK / OVERLAY / FOCUS */
.checkbox-error.checkbox-dark-theme > .checkbox-overlay:focus {
	background-color: var(--m3-sys-dark-error-opacity12);
}

/* CHECKBOX / ERROR / DARK / OVERLAY / ACTIVE */
.checkbox-error.checkbox-dark-theme > .checkbox-overlay:active {
	background-color: var(--m3-sys-dark-error-opacity16);
}

/* BADGES */

.badge {
	border-radius: 100px;
	display: flex;
	align-items: center;
}

/* BADGES / BACKGROUND / LIGHT */
.badge-light-theme {
	background-color: var(--m3-sys-light-error);
}

/* BADGES / BACKGROUND / DARK */
.badge-dark-theme {
	background-color: var(--m3-sys-dark-error);
}

/* BADGES / LABEL / LIGHT */
.badge-light-theme .badge-label-text {
	color: var(--m3-sys-light-on-error);
}

/* BADGES / LABEL / DARK */
.badge-dark-theme .badge-label-text {
	color: var(--m3-sys-dark-on-error);
}

.badge-small {
	width: 6px;
	height: 6px;
}

.badge-single-digit {
	display: inline-block;
}

.badge-multiple-digits {
	display: inline-block;
}

.badge-label-text {
	padding-left: 6px;
	padding-right: 6px;
	margin: 0 auto;
}

.badge-label-text-single-digit {
	font-weight: bold;
}

.badge-label-text-multiple-digit {
	font-weight: normal;
}

/* RADIO BUTTONS */

input[type="radio"] {
	cursor: pointer;
	appearance: none;
	background-color: transparent;
	margin: 0;
	width: 20px;
	height: 20px;
	margin: 10px;
	border-radius: 50%;
	display: flex;
	align-items: center;
	transition: all 300ms;
}

/* RADIO BUTTONS / DISABLED */
.radio-button-disabled {
	pointer-events: none;
}

/* RADIO BUTTONS / DOT */
input[type="radio"]::before {
	content: "";
	width: 10px;
	height: 10px;
	border-radius: 50%;
	transform: scale(0);
	transition: 120ms transform ease-in-out;
	margin: 0 auto;
}

input[type="radio"]:checked::before {
	transform: scale(1);
}

/* RADIO BUTTONS / DOT / LIGHT */
input[type="radio"].radio-button-input-light-theme::before {
	background-color: var(--m3-sys-light-primary);
}

/* RADIO BUTTONS / DOT / DARK */
input[type="radio"].radio-button-input-dark-theme::before {
	background-color: var(--m3-sys-dark-primary);
}

/* RADIO BUTTONS / BORDER / UNSELECTED / LIGHT */
input[type="radio"].radio-button-input-light-theme {
	border: 2px solid var(--m3-sys-dark-on-surface-variant);
}

/* RADIO BUTTONS / BORDER  / UNSELECTED / DARK */
input[type="radio"].radio-button-input-dark-theme {
	border: 2px solid var(--m3-sys-light-outline-variant);
}
/* ... */

